deployments/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitenant-alerts
spec:
  selector:
    app: multitenant-alerts
  ports:
  - protocol: TCP
    port: 9093
    targetPort: 9093
