deployments/kustomize/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: multitenant-alertmanager
  namespace: mimir
spec:
  hosts:
  - "multitenant-alerts.app.dev.company.int"
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: multitenant-alerts
        port:
          number: 9093
